--- a/css/styles.css
+++ b/css/styles.css
@@ -654,70 +654,50 @@ color: #434455;
 
 }
 
+/* ... початок без змін ... */
+
 .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 408px;
-    min-height: 584px;
-    border-radius: 4px;
-    padding: 72px 24px 24px 24px;
-
-    transform: translate(-50%, -50%);
-    
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-    background: #fcfcfc;
-
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    margin-bottom: 8px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 408px;
+  min-height: 584px;
+  border-radius: 4px;
+  padding: 72px 24px 24px;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14),
+              0 1px 3px 0 rgba(0, 0, 0, 0.12),
+              0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background: #fcfcfc;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .popup-close {
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    height: 24px;
-    width: 24px;
-    border-radius: 50%;
-    background-color: #e7e9fc;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 0;
-    cursor: pointer;
-    
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: background-color 250ms, border-color 250ms;
+}
 
-  }
 .icon-close-black {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    fill: #2e2f42;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/* Стиль для svg */
-.icon-form {
-  position: absolute;  /* Необхідно для того, щоб top і transform працювали */
-  top: 50%;  /* Зміщає SVG на 50% висоти контейнера */
-  transform: translateY(-50%);  /* Центрує SVG по вертикалі */
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); /* Стиль для анімацій */
-}
-
-
-.popup-close:focus {
-    outline: none;
+  fill: #2e2f42;
+  transition: fill 250ms;
 }
 
 .popup-close:hover,
 .popup-close:focus {
-    background-color: #404bbf;
-    border: none;
+  background-color: #404bbf;
+  border: none;
 }
 
 .popup-close:hover .icon-close-black,
@@ -726,254 +706,103 @@ color: #434455;
 }
 
 .backdrop:not(.is-open) .modal {
-    transform: translate(-50%, -50%) scale(1.5);
+  transform: translate(-50%, -50%) scale(1.5);
 }
 
 .modal-text {
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-text-align: center;
-color: #2e2f42;
-margin-top: 72px;
-margin-bottom: 16px;
-padding-left: 16px;
-padding-right: 16px;
-display: flex;
-align-items: center;
-justify-content: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  color: #2e2f42;
+  margin: 72px 0 16px;
+  padding: 0 16px;
 }
 
-.forma {
-padding-left: 24px;
-padding-right: 24px;
+/* ===== Чекбокс і Privacy Policy ===== */
+
+:root {
+  --main-color: #4d5ae5;
+  --icon-fill-color: #F4F4FD;
+  --link-color: #4d5ae5;
+  --label-text-color: #8e8f99;
 }
 
-.popup-label {
-display: inline-block;
-font-weight: 400;
-font-size: 12px;
-line-height: 1.16667;
-letter-spacing: 0.04em;
-color: #8e8f99;
-margin-bottom: 4px;
-line-height: 1.17; 
-display: block;
+.custom-checkbox-input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  white-space: nowrap;
 }
 
-.popup-form-all {
-    margin-bottom: 8px;
+.custom-checkbox-label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--label-text-color);
 }
 
-.popup-input {
-border-radius: 4px;
-width: 100%;
-height: 40px;
-display: flex;
-align-items: center;
-justify-content: center;
-border: 1px solid rgba(46, 47, 66, 0.4);
-padding-left: 38px;
-outline: none;
-outline: transparent;
-background-color: transparent;
-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.checkbox-box {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms, border 250ms, fill 250ms;
 }
 
-.popup-input:focus {
-  border-color: #4D5AE5;
-  outline: transparent;
+.checkbox-icon {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: transparent;
+  transition: fill 0.3s;
 }
 
-.popup-input-wrapper {
-    margin-bottom: 8px;
-    position: relative;
+.custom-checkbox-input:checked + .custom-checkbox-label .checkbox-box {
+  background-color: #404bbf;
+  border: none;
 }
 
-.icon-close-black {
-top: 50%;
-transform: translateY(-50%);
+.custom-checkbox-input:checked + .custom-checkbox-label .checkbox-icon {
+  fill: var(--icon-fill-color);
 }
 
-.popup-textarea {
-border: 1px solid rgba(46, 47, 66, 0.4);
-border-radius: 4px;
-width: 100%;
-height: 120px;
-padding-left: 16px;
-padding-top: 8px;
-resize: none;
-outline: none;
-margin-bottom: 16px;
-font-size: 12px;
-line-height: 1.17;
-letter-spacing: 0.04em;
-color: rgba(46, 47, 66, 0.4);
-background-color: transparent; 
-padding: 8px 16px;
-outline: transparent;
-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.checkbox-text {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  color: var(--label-text-color);
+  white-space: nowrap;
+  display: inline-flex;
 }
 
-.popup-textarea:focus {
-    border-color: #4D5AE5;
+.privacy-policy {
+  color: var(--link-color);
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  line-height: 1.33;
+  font-family: Arial, sans-serif;
+  text-transform: lowercase;
 }
-
-.popup-textarea::placeholder {
-    color: rgba(46, 47, 66, 0.4);
-}
-
-.popup-input-wrapper svg {
-position: absolute;
-top: 8px;
-left: 16px;
-transform: translate(-50%);
-bottom: 8px;
-fill: #4D5AE5;
-}
-
-.popup-input-wrapper:has(input:hover) .icon-form,
-.popup-input-wrapper:has(input:hover) .icon-form {
-    fill: #4d5ae5;
-
-}
-
-.popup-input-wrapper:hover,
-.popup-input-wrapper:hover {
-    border: 1px solid #4d5ae5;
-    border-radius: 4px;
-}
-
 
 .checkbox-container {
-    display: flex;
-    align-items: center;
-    gap: 8px; /* Між чекбоксом і текстом */
-    margin-bottom: 24px;
-  }
-  
-  /* Приховуємо чекбокс старим методом (visually hidden) */
-  .custom-checkbox-input {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    border: 0;
-    overflow: hidden;
-    clip: rect(0 0 0 0);
-    white-space: nowrap;
-  }
-  
-  /* Контейнер з чекбоксом і текстом */
-  :root {
-    --label-text-color: #8e8f99;
-  }
-  
-  .custom-checkbox-label {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    cursor: pointer;
-    flex-wrap: nowrap;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #8e8f99;
-  }
+  margin-bottom: 8px;
+}
 
-  
-  .popup-label {
-    color: var(--label-text-color);
-  }
-  
-  
-  /* Квадрат для кастомного чекбокса */
-.checkbox-box {
-width: 16px;
-height: 16px;
-border: 1px solid rgba(46, 47, 66, 0.4);
-border-radius: 2px;
-display: inline-flex; /* Використовуємо тільки один раз */
-align-items: center;
-justify-content: center;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-fill: transparent;
-  }
-  
-  
-  /* SVG-іконка */
-  .checkbox-icon {
-    fill: transparent;
-    transition: fill 0.3s;
-  }
-  
-  /* Активний стан — зміна фону і іконки */
-  .custom-checkbox-input:checked + .custom-checkbox-label .checkbox-box {
-    background-color: #404bbf;
-    border-color: #404bbf;
-  }
-
-  /* Стиль для чекбокса, коли він у стані checked */
-.custom-checkbox-input:checked + .custom-checkbox-label .checkbox-box {
-    border: none;  /* Вимикає стандартне оформлення border */
-  }
-  
-  
-  .custom-checkbox-input:checked + .custom-checkbox-label .checkbox-icon {
-    fill: #f4f4fd;
-  }
-
-  :root {
-    --main-color: #4d5ae5;  /* Оголошення змінної з ім'ям "main-color" */
-    --font-size: 16px;
-    --icon-fill-color: #F4F4FD;
-  }
-
-/* Стиль для чекбокса, коли він у стані checked */
-.custom-checkbox-input:checked + .custom-checkbox-label .checkbox-box svg {
-  fill: var(--icon-fill-color, #F4F4FD);
-}  /* Змінює колір іконки */
-  
-  /* Стиль для посилання в класі, що містить текст "Privacy Policy" */
-  .privacy-policy {
-    color: var(--link-color, #4d5ae5);  /* Встановлює колір тексту для посилання */
-  }
-  
-  /* Стиль для класу, що містить мінімум 3 символи і латиницю */
-  .custom-checkbox-label a {
-    text-transform: lowercase;  /* Перетворює текст на маленькі літери */
-    font-family: Arial, sans-serif; /* Для забезпечення латиниці */
-  }
-  
-  
-  /* Текст чекбокса в один рядок */
-  .checkbox-text {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16667;
-    letter-spacing: 0.04em;
-    color: #8e8f99;
-    white-space: nowrap;  /* Не переносити текст на новий рядок */
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    fill: transparent;
-    display: inline-flex;
-  }
-  
-  .privacy-policy {
-    color: var(--link-color, #4d5ae5);
-    text-decoration: underline;
-    text-decoration-skip-ink: none;
-    line-height: 1.33333;
-  }
-
-  .custom-checkbox-label a {
-    text-transform: lowercase;
-    font-family: Arial, sans-serif;
-  }
-  
-button, .btn{
-margin-bottom: 24px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+button, .btn {
+  margin-bottom: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
